# extrawest_ocpi

./: MIGRATION.md  README.md  pyproject.toml
.github/workflows/: testing_ci_cd.yml
py_ocpi/: main.py
py_ocpi/core/: config.py  data_types.py  dependencies.py  push.py  schemas.py
py_ocpi/modules/cdrs/v_2_1_1/: schemas.py
py_ocpi/modules/cdrs/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/cdrs/v_2_2_1/: schemas.py
py_ocpi/modules/cdrs/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/chargingprofiles/v_2_2_1/: background_tasks.py  schemas.py
py_ocpi/modules/chargingprofiles/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/commands/v_2_1_1/: schemas.py
py_ocpi/modules/commands/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/commands/v_2_2_1/: schemas.py
py_ocpi/modules/commands/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/credentials/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/credentials/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/hubclientinfo/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/locations/: schemas.py
py_ocpi/modules/locations/v_2_1_1/: schemas.py
py_ocpi/modules/locations/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/locations/v_2_2_1/: schemas.py
py_ocpi/modules/locations/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/sessions/v_2_1_1/: schemas.py
py_ocpi/modules/sessions/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/sessions/v_2_2_1/: schemas.py
py_ocpi/modules/sessions/v_2_2_1/api/: cpo.py  emsp.py
py_ocpi/modules/tariffs/v_2_1_1/: schemas.py
py_ocpi/modules/tariffs/v_2_1_1/api/: cpo.py  emsp.py
py_ocpi/modules/tariffs/v_2_2_1/: schemas.py
py_ocpi/modules/tokens/v_2_1_1/: schemas.py
py_ocpi/modules/tokens/v_2_2_1/: schemas.py
tests/test_core/: test_config.py  test_data_types.py
tests/test_modules/test_v_2_1_1/test_cdrs/: utils.py
tests/test_modules/test_v_2_1_1/test_credentials/: test_credentials.py
tests/test_modules/test_v_2_2_1/test_credentials/: test_credentials.py
(+8 files in other folders)
